# clc.

./: .gitignore  CMakeLists.txt  Makefile  README.md  bug_report.md  clc-0.1.deb  clc.cpp  install_dependency.sh  todo
.github/workflows/: build.yml  c-cpp.yml
clc-0.1/DEBIAN/: control  postinst
clc-0.1/usr/share/applications/: clc.desktop
debian/: control  install
debian/usr/: bin
include/: clc.h  glyph_gl.h  glyph_util.h
include/glyph/: glyph.h  glyph_atlas.h  glyph_effect.h  glyph_image.h  glyph_truetype.h
src/: clc.cpp
